...
          variant={appleAvailable ? 'secondary' : 'primary'}
          size="lg"
          fullWidth
          onPress={() => router.push('/(auth)/sign-up')}
        />
        <Button
          label="I already have an account"
          variant="ghost"
          size="md"
          fullWidth
          onPress={() => router.push('/(auth)/sign-in')}
        />

...
